# amilyhub

./: .gitignore  AGENT_ENTRY.md  README.md  merge_all.sh
apps/api/: README.md  main.py  pyproject.toml  scripts_export_probe.py
apps/api/app/: api.py  config.py  db.py
apps/api/app/core/: application.py  bootstrap.py  config.py  errors.py  runtime.py  schema.py
apps/api/app/dependencies/: __init__.py  operator.py
apps/api/app/migrations/: add_student_class_fields.sql
apps/api/app/repositories/: audit.py  classes.py  courses.py  dashboard.py  finance.py  integrity.py  order_events.py  orders.py  rbac.py  rollcalls.py  rooms.py  schedule_events.py  schedules.py  students.py  teachers.py
apps/api/app/routers/: __init__.py  audit.py  classes.py  courses.py  dashboard.py  finance.py  health.py  integrity.py  orders.py  rbac.py  rollcalls.py  rooms.py  schedule_events.py  schedules.py  students.py  teachers.py
apps/api/app/schemas/: __init__.py  classes.py  common.py  dashboard.py  finance.py  integrity.py  orders.py  rbac.py  rollcalls.py  rooms.py  schedule_events.py  students.py  teachers.py
apps/api/schema/: 001_init.sql  002_p0_minimal_closure.sql  003_rbac_audit.sql
apps/api/scripts/: build_export_summary.py  export_remaining.py  export_rollcalls_via_async.py  export_saas_readonly.py  export_segmented.py  import_rollcalls_xls.py  inspect_rollcalls_xls.py  load_raw_to_postgres.py  quick_export.py  quick_export_v2.py  relink_from_raw_json.py  sync_courses_from_xiaomai.py  sync_rollcalls_from_xiaomai.py
apps/api/tests/: test_api.py  test_app_structure.py
(+141 files in other folders)
